Change the package providing the application.