@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java -jar lib/spine-${project.version}.jar "$@"
+java -p lib --add-modules java.sql --add-opens java.desktop/java.beans=snakeyaml -m spine/io.github.i49.spine.bootstrap.Launcher "$@"
